--- a/src/ui/buttons/index.module.scss
+++ b/src/ui/buttons/index.module.scss
@@ -7,6 +7,10 @@
   gap: 6px;
 }
 
+.full-w {
+  width: 100%;
+}
+
 .bold {
   font-weight: 700;
 }
@@ -57,10 +61,11 @@
 .green {
   background-color: $primary-color;
   color: $text-color;
-  border-color: $text-color;
+  border-color: $primary-color;
 
   &:hover {
     background-color: lighten($primary-color, 10%);
+    border-color: lighten($primary-color, 10%);
   }
 }
 
