--- a/src/ui/variables/_colors.scss
+++ b/src/ui/variables/_colors.scss
@@ -1,12 +1,12 @@
 // ui/_colors.scss
 
-$primary-color: #88C738; //main color
-$secondary-color: #78CA11; // discount color
-$tertiary-color: #76AD30; // footer color
-$third-level-categories-background-color: #E7EEDE; // background color of main menu categories
-$background-color: #EDEDED; // page background
+$primary-color: #88c738; //main color
+$secondary-color: #78ca11; // discount color
+$tertiary-color: #76ad30; // footer color
+$third-level-categories-background-color: #e7eede; // background color of main menu categories
+$background-color: #ededed; // page background
 $text-color: #000000;
 $text-color-light: #00000099; //black 60%
 $field-border-color: #00000033; //black 20%
 $button-border-gray-color: #868686;
-$error-color: #FF0000;
+$error-color: #ff0000;
