--- a/src/ui/form/fieldWrapper/index.module.scss
+++ b/src/ui/form/fieldWrapper/index.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 4px;
-  margin-bottom: 18px;
+  margin-bottom: 6px;
   position: relative;
 
   label {
@@ -14,12 +14,13 @@
   }
 
   .error {
-    position: absolute;
+    // position: absolute;
     color: $error-color;
-    font-size: 12px;
-    top: calc( 100% + 3px);
-    left: 0;
+    font-size: 10px;
+    // top: 100%;
+    // left: 0;
     width: 100%;
+    min-height: 12px;
     font-style: italic;
     margin-left: 3px;
   }
