Added disabled state to button, started adding tests to button component

--- a/src/ui/buttons/index.module.scss
+++ b/src/ui/buttons/index.module.scss
@@ -35,7 +35,7 @@
   border: none;
   background-color: transparent !important;
 
-  &:hover {
+  &:hover:not(.disabled) {
     border: none !important;
     background-color: transparent !important;
     outline: none;
@@ -46,7 +46,7 @@
   border: none;
   background-color: transparent !important;
 
-  &:hover {
+  &:hover:not(.disabled) {
     border: none !important;
     background-color: transparent !important;
     outline: none;
@@ -63,7 +63,7 @@
   color: $text-color;
   border-color: $primary-color;
 
-  &:hover {
+  &:hover:not(.disabled) {
     background-color: lighten($primary-color, 10%);
     border-color: lighten($primary-color, 10%);
   }
@@ -74,7 +74,7 @@
   color: $text-color;
   border-color: $text-color;
 
-  &:hover {
+  &:hover:not(.disabled) {
     // background-color: $background-color;
     background-color: rgba($primary-color, 0.3);
   }
@@ -85,7 +85,7 @@
   color: $text-color;
   border-color: $text-color;
 
-  &:hover {
+  &:hover:not(.disabled) {
     // background-color: $background-color;
     background-color: rgba($primary-color, 0.3);
   }
@@ -95,7 +95,7 @@
   color: white;
   border-color: $text-color;
 
-  &:hover {
+  &:hover:not(.disabled) {
     background-color: lighten($text-color, 20%);
   }
 }
@@ -113,11 +113,16 @@
 
 .medium {
   font-size: 16px;
-  line-height: 18pxx;
+  line-height: 18px;
   border-radius: 12px;
   padding: 5px 18px;
 
   &.style-icon {
     padding: 5px;
   }
+}
+
+.disabled{
+  opacity: 0.6;
+  cursor: not-allowed;
 }
