--- a/src/ui/typography/index.module.scss
+++ b/src/ui/typography/index.module.scss
@@ -1,3 +1,6 @@
+@import "../variables/_colors.scss";
+@import "../variables/_global.scss";
+
 /* Define base styling for each typography variant */
 .typography{
     font-weight: 700;
