Added storybook for button component

--- a/src/ui/buttons/index.module.scss
+++ b/src/ui/buttons/index.module.scss
@@ -1,3 +1,6 @@
+@import "../variables/_colors.scss";
+@import "../variables/_global.scss";
+
 .button {
   cursor: pointer;
   transition: $transition;
