--- a/src/components/product-card/extended/index.module.scss
+++ b/src/components/product-card/extended/index.module.scss
@@ -1,9 +1,12 @@
 .container {
-  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  align-items: center;
   padding: 12px;
+  position: relative;
+  background-color: white;
+  border-radius: 20px;
 
   @media (max-width: $mobile-breakpoint) {
     & {
@@ -14,16 +17,25 @@
 
 .title{
   white-space: break-spaces;
+  margin-top: 16px;
 }
 
-.old-price{
-  text-decoration: line-through;
+.specifications{
+  margin: 4px 0 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  justify-content: center;
 }
 
 .price-container{
   display: flex;
   gap: 6px;
-  align-items: center;
+  align-items: baseline;
   justify-content: center;
+}
+
+.old-price{
+  text-decoration: line-through;
 }
 
