Added filters for the category page

--- a/src/ui/filters/checkboxList/index.module.scss
+++ b/src/ui/filters/checkboxList/index.module.scss
@@ -3,12 +3,21 @@
 }
 
 .content{
+  width: 100%;
+  height: 100%;
+  border: 1px solid $field-border-color;
+  border-radius: 12px;
+  overflow: hidden;
+  margin-top: 4px;
+}
+
+.content-overflow{
+  width: 100%;
   height: 100%;
   max-height: 370px;
   overflow: auto;
-  border: 1px solid #00000033;
   border-radius: 12px;
-  padding: 6px;
+  padding: 8px 10px 6px;
 }
 
 .field{
@@ -16,40 +25,53 @@
   align-items: center;
   justify-content: flex-start;
   gap: 8px;
-  margin-bottom: 4px;
+  margin-bottom: 8px;
+  cursor: pointer;
 
-  &:hover .checkbox{
-    border-color: #88c738;
+  &:hover .input{
+    border-color: $primary-color;
   }
-}
-
-.field__checkbox{
-  position: relative;
-  width: 14px;
-  height: 14px;
 }
 
 .input{
-  opacity: 0;
-  position: absolute;
-  pointer-events: none;
-
-  &:checked + .checkbox {
-    background-color: #88c738;
-    border-color: #88c738;
-  }
-}
-
-.checkbox{
+  appearance: none;
+  -webkit-appearance: none;
   width: 14px;
+  min-width: 14px;
   height: 14px;
-  border: 1px solid #00000033;
+  border: 1px solid $field-border-color;
   border-radius: 4px;
-  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  outline: none;
   margin-right: 8px;
-  transition: border-color 0.2s, background-color 0.2s;
+  transition: $transition;
 
+  &:hover{
+    border-color: $primary-color;
+  }
 
+  &:checked {
+    background-color: $primary-color;
+    border-color: $primary-color;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: -1px;
+    left: 3px;
+    width: 4px;
+    height: 8px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    opacity: 0;
+  }
+
+  &:checked::after {
+    opacity: 1;
+  }
 }
 
 .label{
@@ -57,4 +79,5 @@
   align-items: center;
   justify-content: space-between;
   user-select: none;
+  width: 100%;
 }
