--- a/src/ui/variables/_colors.scss
+++ b/src/ui/variables/_colors.scss
@@ -8,5 +8,6 @@ $background-color: #ededed; // page background
 $text-color: #000000;
 $text-color-light: #00000099; //black 60%
 $field-border-color: #00000033; //black 20%
+//$filter-border-color:  #0000001A; // black 10%
 $button-border-gray-color: #868686;
 $error-color: #ff0000;
