--- a/src/components/category-filters/index.module.scss
+++ b/src/components/category-filters/index.module.scss
@@ -4,53 +4,9 @@
   height: 100%;
   background-color: white;
   border-radius: 20px;
-}
-
-.title{
-  margin: 5px 0 25px;
-}
-
-.content{
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-
-.main-banner-container{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 12px;
-  margin: 22px 0;
-
-  & * {
-    border-radius: 12px;
-  }
-
-  @media (max-width: $mobile-breakpoint) {
-    & {
-      grid-template-columns: 1fr;
-    }
-  }
-
-  & > *:nth-child(2){
-    display: flex;
-    flex-direction: column;
-    gap: inherit;
-
-    & > *:nth-child(2){
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: inherit;
-    }
-  }
-
-}
-
-.full-w-banner{
-  margin: 22px 0;
-}
-
-.category-products{
-  margin-bottom: 22px;
+  flex-direction: column;
+  gap: 14px;
+  padding: 18px;
 }
 
