--- a/src/ui/slider/index.scss
+++ b/src/ui/slider/index.scss
@@ -1,9 +1,10 @@
-.slider-container{
+.slider-container {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
 
-  .slider-container__btn{
+  .slider-container__btn {
     height: 100%;
     width: 60px;
     display: flex;
@@ -18,7 +19,7 @@
 
     @media (max-width: $mobile-breakpoint) {
       & {
-       display: none;
+        display: none;
       }
     }
   }
