added categories api and functionalities to product page

--- a/src/components/product/gallery/index.module.scss
+++ b/src/components/product/gallery/index.module.scss
@@ -1,3 +1,15 @@
 .container {
   width: 100%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-items: center;
+
+  & > div:nth-child(2) {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    justify-content: center;
+  }
 }
