--- a/src/components/product/index.module.scss
+++ b/src/components/product/index.module.scss
@@ -1,23 +1,30 @@
 .container {
   width: 100%;
   height: 100%;
+  margin-bottom: 32px;
 }
 
 .head {
-  margin: 22px 0 22px;
+  margin: 28px 0 32px;
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 16px;
+  max-width: 1197px;
 }
 
 .main {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 40% 60%;
   grid-template-rows: 1fr;
   gap: 6px;
+
+  & > div:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .specifications {
