--- a/src/components/product/specification/index.module.scss
+++ b/src/components/product/specification/index.module.scss
@@ -1,3 +1,16 @@
 .container {
   width: 100%;
 }
+
+.title {
+  margin-bottom: 18px;
+}
+
+.content {
+  display: flex;
+  gap: 10px;
+
+  & > div {
+    width: 50%;
+  }
+}
